* Fri Oct 12 2018 Nick Miller <nick.miller@onyxpoint.com> - 7.0.4-0
- Changed the packages from 'latest' to 'installed'
- Ensure parameters will also now respect `simp_options::package_ensure`

* Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.4-0
- Drop Hiera 4 support

* Wed Mar 21 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.4-0
- Add support for Puppet 5 and OEL

* Mon Oct 30 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.3-0
- Allow users to modify the owner, group, and mode of files that may be used by
  multiple subsystems

* Thu Jun 22 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.2-0
- Update custom Puppet 3 functions to namespaced, Puppet 4 functions
- Fix most of the puppet strings problems
- Update puppet requirement and remove OBE pe requirement in metadata.json

* Wed Apr 05 2017 Jeanne Greulich <jeanne.greulich@onyxpoint.com> 7.0.1-0
- Fixed Facter call in type for krb5kdc_auto_keytabs.rb

* Fri Dec 16 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Updated global catalysts

* Tue Nov 22 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.0-0
- Update version to reflect SIMP6 dependencies
- Update to SIMP6 dependencies
- Minor cleanup

* Wed Nov 16 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 5.0.9-0
- Updated iptables dependency version

* Thu Nov 10 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 5.0.9-0
- Eliminated use of deprecated Puppet.newtype

* Wed Sep 28 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.0.7-0
- Fix Forge `haveged` dependency name

* Thu Sep 01 2016 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 5.0.6-0
- Ensure that the /etc/krb5.simp.d/realm* files are mode 644

* Tue Aug 16 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.5-0
- Adapted to the new 'site_files' directory
- Fixed a bug in the selinux policy in EL7

* Thu Aug 11 2016 Nick Miller <nick.miller@onyxpoint.com> - 5.0.4-0
- Keytab file source and permission corrections
