@@ -12,7 +12,7 @@ HOSTS:
       - master
       - client
     platform: el-6-x86_64
-    box: elastic/oel-6-x86_64
+    box: onyxpoint/oel-6-x86_64
     hypervisor: <%= hypervisor %>
     yum_repos:
       epel:
@@ -23,7 +23,7 @@ HOSTS:
     roles:
       - client
     platform: el-7-x86_64
-    box: elastic/oel-7-x86_64
+    box: onyxpoint/oel-7-x86_64
     hypervisor: <%= hypervisor %>
     yum_repos:
       epel:
