@@ -1,3 +1,6 @@
+* Thu Nov 01 2018 Jeanne Greulich <jeanne,greulich@onyxpoint.com> - 7.0.4-0
+- static asset updates for puppet 5
+
 * Fri Oct 12 2018 Nick Miller <nick.miller@onyxpoint.com> - 7.0.4-0
 - Changed the packages from 'latest' to 'installed'
 - Ensure parameters will also now respect `simp_options::package_ensure`
